# prediction-market-assistant

./: .gitignore  skills-lock.json
.cursor/plans/: backend.plan.md  pivot.plan.md  v1.plan.md
.github/workflows/: ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/data/: __init__.py  mock_markets.py
backend/app/models/: __init__.py  dome.py  evaluation.py  intelligence.py  market.py  prediction_hunt.py  topic.py
backend/app/services/: artifacts.py  dome_markets.py  dome_normalize.py  heuristics.py  market_analysis.py  markets.py  persistence.py  prediction_hunt.py  provider_types.py  topics.py
backend/app/services/events/: __init__.py  detector.py  types.py
backend/app/services/kalshi/: __init__.py  client.py  normalize.py  types.py
backend/app/services/signals/: __init__.py  attach.py  provider.py  scoring.py
backend/prediction_market_assistant_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/tests/: test_core_markets.py  test_dome_markets.py  test_event_detector.py  test_kalshi_client.py  test_kalshi_normalize.py  test_market_analysis.py  test_markets.py  test_prediction_hunt.py  test_topics.py
docs/: phase-gates.md  topic-foundation.md
frontend/: .env.example  README.md  components.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: scroll-to.tsx  site-header.tsx  theme-provider.tsx
frontend/lib/: dome-types.ts  formatters.ts  heuristics-types.ts  intelligence-types.ts  market-types.ts  mock-data.ts  (+2 more)
(+41 files in other folders)
