[project]
name = "prediction-market-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for prediction market assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.130.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
